# stackverse

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  codecov.yml  compose.yaml
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: codeql-gate.sh  test-codeql-gate.sh  test-wait-for-compose-service.sh  wait-for-compose-service.sh
.github/workflows/: build-backend-dotnet.yml  build-backend-elixir-phoenix.yml  build-backend-go-echo.yml  build-backend-go.yml  build-backend-grails.yml  build-backend-ktor-kotlin.yml  build-backend-micronaut-java.yml  build-backend-node-nestjs.yml  build-backend-node-ts.yml  build-backend-open-liberty-java.yml  build-backend-php-laravel.yml  build-backend-play-scala.yml  build-backend-python-django.yml  build-backend-python-fastapi.yml  build-backend-quarkus-java.yml  build-backend-ruby-rails.yml  build-backend-rust-axum.yml  build-backend-scala-http4s.yml  build-backend-spring-java.yml  build-backend-spring-kotlin.yml  build-frontend-angular.yml  build-frontend-astro.yml  build-frontend-lit.yml  build-frontend-qwik.yml  build-frontend-react.yml  build-frontend-solid.yml  build-frontend-svelte.yml  build-frontend-vanilla-ts.yml  build-frontend-vue.yml  build-gateway-apisix.yml  build-gateway-go.yml  build-gateway-node-fastify.yml  build-gateway-openresty.yml  build-gateway-python.yml  build-gateway-rust.yml  build-gateway-spring-cloud-gateway.yml  build-gateway-yarp.yml  ci.yml  codeql.yml  test-axe-a11y.yml  (+8 more)
backends/: README.md
backends/dotnet/: .editorconfig  Directory.Build.props  Dockerfile  README.md  StackverseBackend.slnx
backends/elixir-phoenix/: .formatter.exs  .gitignore  Dockerfile  README.md  mix.exs
backends/go/: .gitignore  Dockerfile  README.md  go.mod  go.sum
backends/go-echo/: Dockerfile  README.md  go.mod  go.sum
backends/grails/: .gitignore  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
backends/ktor-kotlin/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
backends/micronaut-java/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
backends/node-nestjs/: .gitignore  .yarnrc.yml  Dockerfile  README.md  eslint.config.js  nest-cli.json  package.json  tsconfig.json
backends/node-ts/: Dockerfile  README.md  package.json  tsconfig.json
backends/open-liberty-java/: Dockerfile  README.md  pom.xml
backends/python-django/: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
backends/python-django/stackverse_api/: __main__.py  apps.py  audit.py  auth.py  config.py  cursor.py  etag.py  exceptions.py  i18n.py  logging_setup.py  models.py  problems.py  representations.py  startup.py  telemetry.py  time.py  validation.py  views.py
backends/python-django/stackverse_api/migrations/: 0001_initial.py
backends/python-django/stackverse_django/: asgi.py  settings.py  urls.py  wsgi.py
backends/python-django/tests/: conftest.py  test_auth_and_errors.py  test_cursor.py  test_etag.py  test_http_admin.py  test_http_bookmarks.py  test_http_moderation.py  test_i18n.py  test_logging_setup.py  test_problems.py  test_startup_and_i18n.py  test_validation.py
backends/python-fastapi/: .gitignore  Dockerfile  README.md  pyproject.toml
backends/python-fastapi/migrations/: 0001_schema.sql
backends/python-fastapi/stackverse_backend/: __init__.py  api.py  audit.py  auth.py  config.py  cursor.py  db.py  etag.py  i18n.py  logging_setup.py  main.py  problems.py  schemas.py  seed.py  telemetry.py  time.py
backends/python-fastapi/stackverse_backend/routers/: __init__.py  admin.py  bookmarks.py  identity.py  messages.py  meta.py  reports.py
backends/python-fastapi/tests/: fakes.py  test_admin_routes.py  test_api_helpers.py  test_audit.py  test_auth.py  test_bookmark_routes.py  test_cursor.py  test_etag.py  test_i18n.py  test_i18n_queries.py  test_message_routes.py  test_problems.py  test_report_routes.py  test_runtime_boundaries.py  test_schemas.py  test_seed.py  test_validation.py
backends/rust-axum/: Cargo.toml  Dockerfile  README.md
backends/rust-axum/migrations/: 0001_schema.sql
backends/rust-axum/src/: auth.rs  config.rs  db.rs  db_tests.rs  error.rs  handlers.rs  logging.rs  main.rs  test_support.rs
backends/rust-axum/src/handlers/: admin.rs  admin_tests.rs  bookmarks.rs  bookmarks_tests.rs  common.rs  identity.rs  messages.rs  messages_tests.rs  mod.rs  reports.rs  reports_tests.rs  tests.rs  wire.rs
conformance/: .gitignore  .yarnrc.yml  package.json  playwright.config.ts  tsconfig.json
docs/: ARCHITECTURE.md  CODE-STATS.md  CONVENTIONS.md  INTENT.md  INVARIANTS.md  LOGGING.md  RUNNING.md  SPEC.md
e2e/: .gitignore  .yarnrc.yml  package.json  playwright.config.ts
e2e/tests/: helpers.ts  (+13 more)
frontends/: README.md
gateways/: README.md
gateways/python/: Dockerfile  README.md  pyproject.toml
gateways/python/stackverse_gateway/: __init__.py  __main__.py  app.py  config.py  logging.py  oidc.py  otel.py  problems.py  proxy.py  security.py  sessions.py
gateways/python/stackverse_gateway/static/: index.html
gateways/python/tests/: test_config.py  test_gateway.py  test_gateway_boundaries.py  test_logging_security.py  test_oidc.py  test_sessions.py
gateways/rust/: Cargo.toml  Dockerfile  README.md
gateways/rust/src/: config.rs  lib.rs  logging.rs  main.rs  oidc.rs  problems.rs  proxy.rs  security.rs  session.rs
gateways/rust/src/static/: index.html
gateways/rust/tests/: gateway_contract.rs  process_startup.rs  redis_store.rs
gateways/rust/tests/support/: mod.rs
scripts/: build-images.ps1  build-images.sh  code-stats.ps1  code-stats.sh  conformance.ps1  conformance.sh  dev-stack.ps1  dev-stack.sh  e2e.ps1  e2e.sh  hurl-api.ps1  hurl-api.sh  k6-system.ps1  k6-system.sh  run-stack.ps1  run-stack.sh  schemathesis-api.ps1  schemathesis-api.sh  seed-test-data.ps1  seed-test-data.sh  tracetest-otel.ps1  tracetest-otel.sh  zap-security.ps1  zap-security.sh
spec/: openapi.yaml
testing/: README.md
tools/: code-stats.mjs  code-stats.test.mjs  normalize-coverage-paths.mjs  seed-test-data.mjs
(+1724 files in other folders)
