[project]
name = "stackverse-backend-python-django"
version = "0.1.0"
description = "Stackverse backend implementation in Python with Django REST Framework"
requires-python = ">=3.14"
dependencies = [
  "Django>=6.0.7,<7",
  "djangorestframework>=3.17.1,<4",
  "psycopg[binary]>=3.3.4,<4",
  "PyJWT[crypto]>=2.13.0,<3",
  "httpx>=0.28.1,<1",
  "uvicorn[standard]>=0.51.0,<1",
  "opentelemetry-api>=1.43.0,<2",
  "opentelemetry-sdk>=1.43.0,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.43.0,<2",
  "opentelemetry-instrumentation-django>=0.64b0,<1",
  "opentelemetry-instrumentation-psycopg>=0.64b0,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
  "pytest-django>=4.12.0,<5",
  "ruff>=0.15.21,<1",
]

[project.scripts]
stackverse-backend-python-django = "stackverse_api.__main__:run"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stackverse_api", "stackverse_django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stackverse_django.settings"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["stackverse_api"]
