[project]
name = "stackverse-backend-python-fastapi"
version = "0.1.0"
description = "Stackverse backend implementation in Python with FastAPI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "PyJWT[crypto]>=2.9,<3",
  "httpx>=0.27,<1",
  "opentelemetry-api>=1.29,<2",
  "opentelemetry-sdk>=1.29,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29,<2",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
  "opentelemetry-instrumentation-psycopg>=0.50b0,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
]

[project.scripts]
stackverse-backend-python-fastapi = "stackverse_backend.main:run"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stackverse_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["stackverse_backend"]
