[project]
name = "stackverse-backend-python-fastapi"
version = "0.1.0"
description = "Stackverse backend implementation in Python with FastAPI"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.139.0,<1",
  "uvicorn[standard]>=0.50.0,<1",
  "psycopg[binary,pool]>=3.3.4,<4",
  "PyJWT[crypto]>=2.13.0,<3",
  "httpx>=0.28.1,<1",
  "opentelemetry-api>=1.43.0,<2",
  "opentelemetry-sdk>=1.43.0,<2",
  "opentelemetry-exporter-otlp-proto-grpc>=1.43.0,<2",
  "opentelemetry-instrumentation-fastapi>=0.64b0,<1",
  "opentelemetry-instrumentation-psycopg>=0.64b0,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
]

[project.scripts]
stackverse-backend-python-fastapi = "stackverse_backend.main:run"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stackverse_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["stackverse_backend"]
