[package]
name = "stackverse-gateway-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json", "macros"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
mime_guess = "2.0.5"
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "internal-logs", "logs", "reqwest-client", "trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["experimental_logs_batch_log_processor_with_async_runtime", "experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio-current-thread"] }
rand = "0.10.2"
redis = { version = "1.3.0", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-no-provider", "stream", "form"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
rsa = { version = "0.9.10", features = ["pem"] }
